# RipsawEngine

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  README.template.md  pull_deps_android.sh
engine/: CMakeLists.txt
engine/include/RipsawEngine/2D/Core/: Core.hxx  Engine.hxx  Game.hxx  Timer.hxx
engine/include/RipsawEngine/2D/Managers/: BGManager.hxx  Managers.hxx
engine/include/RipsawEngine/2D/Scene/: Actor.hxx  Component.hxx  Scene.hxx  SpriteComponent.hxx  SpritesheetComponent.hxx  TransformComponent.hxx
engine/include/RipsawEngine/3D/: pch.hxx
engine/include/RipsawEngine/3D/Core/: Engine.hxx
engine/include/RipsawEngine/3D/Util/: stbimg.hxx
engine/include/RipsawEngine/Core/: Core.hxx  Engine.hxx  Game.hxx  Timer.hxx
engine/include/RipsawEngine/Managers/: BGManager.hxx  Managers.hxx
engine/include/RipsawEngine/Scene/: Actor.hxx  Component.hxx  Scene.hxx  SpriteComponent.hxx  SpritesheetComponent.hxx  TransformComponent.hxx
engine/shaders/gl/: triangle.frag
engine/shaders/gles2/: triangle.frag  triangle.vert
engine/src/: Actor.cxx  BGManager.cxx  Component.cxx  Engine.cxx  Game.cxx  SpriteComponent.cxx  SpritesheetComponent.cxx  Timer.cxx  TransformComponent.cxx  processInput.cxx  renderEngine.cxx  updateEngine.cxx
engine/src/2D/: Actor.cxx  BGManager.cxx  Component.cxx  Engine.cxx  Game.cxx  SpriteComponent.cxx  SpritesheetComponent.cxx  Timer.cxx  TransformComponent.cxx  processInput.cxx  renderEngine.cxx  updateEngine.cxx
engine/src/3D/: Engine.cxx  readFile.cxx  stb_impl.cxx
include/: Actor.hxx  Component.hxx  Engine.hxx  TransformComponent.hxx
platform/android/: build.gradle
platform/android/app/: build.gradle  proguard-rules.pro
platform/android/app/jni/: CMakeLists.txt
platform/android/app/jni/src/: CMakeLists.txt  engine  sandbox
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/: shaders
platform/android/app/src/main/java/com/ripsawengine/sandbox3d/: HIDDevice.java  HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
platform/android/app/src/main/res/values/: strings.xml
sandbox/: CMakeLists.txt
sandbox/src/: main.cxx
sandbox/src/2D/: main.cxx
sandbox/src/3D/: main.cxx
scripts/: gen_docs.py
src/: Actor.cxx  Component.cxx  Engine.cxx  TransformComponent.cxx  main.cxx  processInput.cxx  renderEngine.cxx  updateEngine.cxx
supp/: tsan.supp
